<resources>
    <string name="app_name">BlackCoffer</string>
    <string name="refine">Refine</string>
    <string name="explore">Explore</string>
    <string name="network">Network</string>
    <string name="chat">Chat</string>
    <string name="contacts">Contacts</string>
    <string name="navigation_drawer_open">opened_drawer</string>
    <string name="navigation_drawer_close">closed_drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>