<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refine"
        android:icon="@drawable/refine_icon"
        app:showAsAction="always"
        android:title="@string/refine" />

    <item
        android:id="@+id/explore"
        app:showAsAction="always"
        android:icon="@drawable/explore_icon"
        android:title="@string/explore" />

    <item
        android:id="@+id/network"
        app:showAsAction="always"
        android:icon="@drawable/network_icon"
        android:title="@string/network" />
    <item
        android:id="@+id/chat"
        android:icon="@drawable/chat_icon"
        app:showAsAction="always"
        android:title="@string/chat" />
    <item
        android:id="@+id/contacts"
        app:showAsAction="always"
        android:icon="@drawable/contacts_icon"
        android:title="@string/contacts" />

</menu>